refactor: migrate Collections/Arrays.asList to Java 9+ collection factories (#543)
* refactor: migrate Collections/Arrays.asList to Java 9+ factory methods

Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of(), Collections.singletonList()
with List.of(), Collections.unmodifiableList(Arrays.asList()) with
List.of(), and Collections.singleton() with Set.of() across 10 files.
Update imports accordingly.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* fix: use Set.of(tag) instead of new HashSet<>(List.of(tag))

Motivation:
Review feedback suggesting Set.of(tag) is more direct and idiomatic
when the field type is Set<String> and no mutation is needed.

Modification:
Replace new HashSet<>(List.of(tag)) with Set.of(tag) in
EventGeneratorApp.java.

Result:
Cleaner code using the modern Set.of() factory directly.