@@ -202,8 +202,7 @@ public class ShoppingCart
 
   // #slicingTags
   public static final List<String> tags =
-      Collections.unmodifiableList(
-          Arrays.asList("carts-0", "carts-1", "carts-2", "carts-3", "carts-4"));
+      List.of("carts-0", "carts-1", "carts-2", "carts-3", "carts-4");
 
   // #slicingTags
 
@@ -212,7 +211,7 @@ public class ShoppingCart
   public Set<String> tagsFor(Event event) {
     int n = Math.abs(cartId.hashCode() % tags.size());
     String selectedTag = tags.get(n);
-    return Collections.singleton(selectedTag);
+    return Set.of(selectedTag);
   }
 
   // #tagging
